<resources>
    <string name="app_name">Asteroid Radar</string>

    <string name="logo_name">Asteroid\nRadar</string>
    <string name="asteroid_details">Asteroid Details</string>
    <string name="logo_description">Asteroid Radar Logo</string>
    <string name="application_loading">Application is loading</string>
    <string name="list_of_asteroids_loading">Loading asteroids</string>
    <string name="asteroid_list_empty">No asteroids listed\nPlease check your connection</string>
    <string name="list_of_asteroids">This is the list of asteroids closest approach to earth next week</string>
    <string name="OK">OK</string>
    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="magnitude_unit_format">%f M</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="astronomical_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
</resources>