<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".ui.launcher.LauncherActivity">

    <ImageView
        android:id="@+id/appMainLogoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/asteroid_radar_logo"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toTopOf="@+id/appMainLogoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/bias_half"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appMainLogoText"
        style="@style/LauncherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:text="@string/logo_name"
        app:layout_constraintBottom_toTopOf="@+id/appLoadingProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/bias_half"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appMainLogoImage" />

    <ProgressBar
        android:id="@+id/appLoadingProgressBar"
        style="@style/DefaultProgressBar"
        android:contentDescription="@string/application_loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/bias_half"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appMainLogoText" />
</androidx.constraintlayout.widget.ConstraintLayout>